--- a/VMA.NET/VMA.NET.csproj
+++ b/VMA.NET/VMA.NET.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Silk.NET.Vulkan" Version="2.*" />
+        <PackageReference Include="Silk.NET.Vulkan" Version="2.22.0" />
     </ItemGroup>
 
     <ItemGroup>
